Alignment issue fixed

--- a/src/components/Profit/profit.css
+++ b/src/components/Profit/profit.css
@@ -31,7 +31,7 @@ align-items: center;
     align-items: center;
     gap:0.8rem;
     border-radius: 10px;
-    padding:6%;
+    padding:2%;
     width:100%;
 }
 .netprofit-container{
@@ -45,7 +45,7 @@ align-items: center;
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap:0.5rem;
+    gap: 1.5em;
 }
 .progressbar-wrapper{
     display: flex;
